@@ -10,6 +10,8 @@ Changes to Version 2.0-21
 
     o Replaced vif.lm() with vif.default() to cover wider variety of models (after question by Laura Rigg about gls models).
 
+    o Diagonal panels in scatterplotMatrix() (except for histograms) show groups separately when plotted by groups (suggestion by Erich Neuwirth).
+
 Changes to Version 2.0-20
 
     o Added new id.method="r" to showLabels for labeling plots of residuals; default id.method changed in residualPlots.
